--- a/TestApp/App.xaml
+++ b/TestApp/App.xaml
@@ -1,7 +1,8 @@
-﻿<Application
+﻿
+<caliburn:CaliburnApplication
     x:Class="TestApp.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TestApp">
+    xmlns:caliburn="using:Caliburn.Micro">
 
-</Application>
+</caliburn:CaliburnApplication>
